fix(z-index): update z-index values for header and menu components

--- a/components/layouts/header/header.module.css
+++ b/components/layouts/header/header.module.css
@@ -6,7 +6,7 @@
     top: 0;
     display: flex;
     align-items: center;
-    z-index: var(--z-index-menu);
+    z-index: var(--z-index-header);
     width: 100%;
     height: fit-content;
     background-color: transparent;
