--- a/components/layouts/menu/menu.module.css
+++ b/components/layouts/menu/menu.module.css
@@ -201,7 +201,7 @@
     background-color: transparent;
     border: none;
     padding: 0;
-    z-index: calc(var(--z-index-menu) + 2);
+    z-index: calc(var(--z-index-header) + 2);
     border-radius: var(--outline-border-radius);
 }
 
@@ -306,7 +306,7 @@
     position: absolute;
     top: 100%;
     left: 0;
-    z-index: calc(var(--z-index-menu) + 1);
+    z-index: calc(var(--z-index-header) + 1);
     overflow-y: auto;
     width: 100%;
     max-height: calc(100vh - 100%);
